--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./node_modules/bootstrap/scss/bootstrap.scss">
+  <script defer src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 <body>
   <app-root></app-root>
